--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,13 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  flutter_webview_plugin: ^0.3.0+2
-  flutter_secure_storage: ^3.2.0
+  flutter_webview_plugin: ^0.4.0
+  flutter_secure_storage: ^4.2.0
   http: ^0.13.3
-  shared_preferences: ^0.5.2
+  shared_preferences: ^2.0.6
   flutter:
     sdk: flutter
-  pedantic: ^1.9.0
+  pedantic: ^1.11.0
 
 dev_dependencies:
   flutter_test:
